Changelog
=========

2019.4.0 (unreleased)
---------------------

- Nightly jobs: Add short -f option as alias for --force. [lgraf]
- Nightly jobs: Don't require ftw.raven when running locally [lgraf]
- Include actor_id and actor_label in @notifications endpoint responses. [lgraf]
- Bump docxcompose version to 1.0.1 [njohner]
- Improve SIP package generation and download. [phgross]
- Fix qa tests. [lgraf]
- Disable properties action for teams. [deiferni]
- Add source vocabularies for workspace invitations and todo responsibles. [njohner]
- Add hard limit for number of todos in single workspace. [njohner]
- Enable c.indexing during tests, but patch it to not defer operations. [lgraf]
- Add teamraum todolist content-type. [phgross]
- Add teamraum todo content-type. [elioschmutz]
- Fix creation and handling for subtasks of sequential tasks. [phgross]
- Disable collective.indexing during bundle import. [buchi]
- Fix upgrade step that adds linguistic index for task principal. [lgraf]
- Add ftw.catalogdoctor to dependencies. [deiferni]
- Fix exception formatter patch when there is no plone site. [deiferni]
- @listing endpoint: Exclude searchroot from Solr results. [lgraf]
- Avoid reindexing 'created' during IObjectCopiedEvent to fix copy & pasting with Solr. [lgraf]
- Allow Readers, Member and Managers to access users information for all users. [phgross]
- @listing endpoint: Add support for filtering by relative path depth. [lgraf]
- Update plone.restapi to latest release. [phgross]
- Add optional facet values and counts search to listing endpoint. [njohner]
- Add POST restapi endpint @mworkspace-invitations/{id}/{action}. [elioschmutz]
- Add GET restapi endpint @my-workspace-invitations. [elioschmutz]
- Allow range queries on deadline in listing endpoint. [njohner]
- Update and improve documentation for checked-out documents. [phgross, njohner]
- Add fields available in listing endpoint for each type to documentation. [njohner]